--- a/angular.json
+++ b/angular.json
@@ -106,7 +106,8 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "https://fonts.googleapis.com/icon?family=Material+Icons"
             ],
             "scripts": []
           }
